--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "gatsby": "^2.19.7",
+    "gatsby-plugin-feed": "^2.3.27",
+    "gatsby-plugin-google-analytics": "^2.1.36",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-remark-images": "^3.1.44",
+    "gatsby-source-filesystem": "^2.1.48",
     "gatsby-theme-blog": "^1.2.35",
+    "gatsby-transformer-remark": "^2.6.53",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
