--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gatsby-transformer-remark": "^2.6.53",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "resolutions": {
+    "sharp": "^0.29.0"
   }
 }
