--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "gatsby-starter-blog-theme",
   "private": true,
-  "version": "0.0.1",
+  "name": "minimal-blog",
+  "description": "Typography driven, feature-rich blogging theme with minimal aesthetics. Includes tags/categories support and extensive features for code blocks such as live preview, line numbers, and line highlighting.",
+  "version": "1.3.16",
+  "author": "LekoArts",
+  "license": "0BSD",
+  "starter-name": "gatsby-starter-minimal-blog",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "build": "gatsby build",
+    "develop": "gatsby develop",
+    "develop:cypress": "cross-env CYPRESS_SUPPORT=y yarn develop",
+    "build:cypress": "cross-env CYPRESS_SUPPORT=y yarn build",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^2.19.7",
-    "gatsby-plugin-feed": "^2.3.27",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-theme-blog": "^1.2.35",
-    "gatsby-transformer-remark": "^2.6.53",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "@lekoarts/gatsby-theme-minimal-blog": "^6.2.1",
+    "gatsby": "^5.13.6",
+    "gatsby-plugin-feed": "^5.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-webpack-statoscope": "^1.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "cross-env": "^7.0.3",
+    "typescript": "^5.5.3"
   }
 }
