--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ajv": "^7.2.4",
     "cross-env": "^7.0.3",
     "typescript": "^5.5.3"
   }
